--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "project_syncfusion_dashboard",
+  "homepage":"https://Sathvik6323.github.io/project_syncfusion_dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
